ckd-prep/nginx/ingress-resource-backend.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wear
spec:
  backend:
    serviceName: nginx-ingress
    servicePort: 80
